# libpersist

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  libpersist.pc.in
bindings/python/: CMakeLists.txt  persist.pxd  persist.pyx  setup.py
include/: persist.h
src/: internal.h  persist.c  utils.c
src/drivers/: sqlite.c
tests/: main.c  tests.h
tests/api/: persist.c
tests/benchmark/: CMakeLists.txt  benchmark.c
tests/python/: .gitignore  conftest.py  test_collection.py  test_database.py  test_query.py
tools/persisttool/: CMakeLists.txt  persisttool.c
